--- a/app/views/users/adding/add_users_manually.html.erb
+++ b/app/views/users/adding/add_users_manually.html.erb
@@ -1,3 +1,4 @@
+<p id="notice"><%= notice %></p>
 <div class="card" style="max-width: 80rem; min-height: 30rem">
     <h5 class="card-header card--header--title">Add Users Manually</h5>
     <div class="card-body">
