--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -1,10 +1,10 @@
-<div class="row row-cols-1 row-cols-md-2 g-4">
+<p id="notice"><%= notice %></p>
+<div class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col">
-        <div class="card mb-3" style="max-width: 35rem;">
-            <div class="card-header card--header"><%= link_to "Classes", root_path, class:"card--header--link" %></div>
+        <div class="card text-white bg-success mb-3" style="max-width: 35rem;">
+            <div class="card-header card--header"><%= link_to "Courses", courses_path, class:"card--header--link" %></div>
             <div class="card-body">
-                <h5 class="card-title">Success card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">All courses of this school: <%= current_user.school.name %></p>
             </div>
         </div>
     </div>
