--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -4,6 +4,7 @@
   <h5 class="card-header card--header--title">
     <%=@course.name %>
     <%= link_to 'Back', courses_path, class:"btn btn--primary2--add" %>
+    <%= link_to 'Attendants', courses_all_users_path(@course), class:"btn btn--primary2--add"  %>
     <%= link_to 'Edit', edit_course_path(@course), class:"btn btn--primary2--add"  %>
   </h5>
   <div class="card-body">
