--- a/app/views/courses/add_users_to_course.html.erb
+++ b/app/views/courses/add_users_to_course.html.erb
@@ -1,8 +1,12 @@
 <p id="notice"><%= notice %></p>
 <div class="card" style="max-width: 80rem; min-height: 30rem">
-  <h5 class="card-header card--header--title">Add Users To Course</h5>
+  <h5 class="card-header card--header--title">Add Attendants To Course: <%= @course.name %>
+    <%= link_to 'Back', courses_users_of_course_path(@course), class:"btn btn--primary2--header--button" %>
+  </h5>
   <div class="card-body">
-    <h5 class="card--title">List of users from this school:</h5><br />
+    <h5 class="card--title">List of users from this school: <b><i><%= current_user.school.name %></i></b></h5><br />
+        <div class="card-text">
+        </div>
         <div class="table-responsive">
             <table class="table">
                 <thead class="table">
@@ -13,7 +17,8 @@
                         <th>Administrator</th>
                         <th>Teacher</th>
                         <th>Student</th>
-                        <th colspan="3"></th>
+                        <th>Add</th>
+                        <th>Remove</th>
                     </tr>
                 </thead>
 
@@ -26,10 +31,14 @@
                         <td><%= user.administrator %></td>
                         <td><%= user.teacher %></td>
                         <td><%= user.student %></td>
-                        <td><%#= user 'Show', user %></td>
-                        
-                        <td><%#= link_to 'Edit', edit_friend_path(friend) %></td>
-                        <td><%#= link_to 'Destroy', user, //there is no user_path//,method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                        <% if UsersCourse.find_by_course_id_and_user_id(@course.id, user.id) == nil%>
+                            <td><%= link_to '+', courses_assign_user_to_course_url(id: @course, user_id: user), method: :assign_user_to_course, class:"btn btn--primary2--table" %></td>
+                        <% else %>
+                            <td></td>
+                            <td>
+                                <%= link_to '-', courses_remove_user_from_course_url(id: @course, user_id: user), method: :remove_user_from_course, class:"btn btn--primary2--table" %>
+                            </td>
+                        <% end %>
                     </tr>
                     <% end %>
                 </tbody>
