--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <div class="card" style="max-width: 80rem; min-height: 30rem">
-    <h5 class="card-header card--header--title">All Courses <%= link_to 'New Course', new_course_path, class:"btn btn--primary2--add"  %></h5>
+    <h5 class="card-header card--header--title">All Courses <%= link_to 'New Course', new_course_path, class:"btn btn--primary2--header--button"  %></h5>
     <div class="card-body">
       <div class="row row-cols-1 row-cols-md-4 g-4">
         <% @courses.each do |course| %>
@@ -10,7 +10,6 @@
               <div class="card-header card--header"><%= link_to course.name, course, class:"card--header--link" %></div>
               <div class="card-body">
                 <p class="card-text"><%= course.description %></p>
-                <%= link_to 'Delete', course, method: :destroy, data: { confirm: 'Are you sure you want to delete ' + course.name + '?' }, class:"btn btn--primary2--delete" %>
               </div>
             </div>
           </div>
@@ -18,27 +17,3 @@
       </div>
     </div>
 </div>
-
-<!--
-<table>
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Description</th>
-          <th colspan="3"></th>
-        </tr>
-      </thead>
-
-      <tbody>
-        <%# @courses.each do |course| %>
-          <tr>
-            <td><%#= course.name %></td>
-            <td><%#= course.description %></td>
-            <td><%#= link_to 'Show', course %></td>
-            <td><%#= link_to 'Edit', edit_course_path(course) %></td>
-            <td><%#= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-          </tr>
-        <%# end %>
-      </tbody>
-    </table>
--->
