--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -14,18 +14,17 @@
 					<h2><b><br/>Edit Profile</b></h2>
 				</div>
 					
-          <%= nested_form_for([resource_name, resource.with_school], url: registration_path(resource_name)) do |f| %>
+          <%= nested_form_for([resource_name, resource.with_school], url: registration_path(resource_name), html: { method: :put }) do |f| %>
   
-              <b><u><h3><br />Administrator</h3></u></b>
               <div class="row form-group form__input">
                 <b><%= f.label :first_name %></b><br />
-                <%= f.text_field :first_name, autocomplete: "first_name", placeholder: @current_user.first_name %>
+                <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", value: @current_user.first_name %>
 
                 <b><%= f.label :last_name %></b><br />
-                <%= f.text_field :last_name, placeholder: @current_user.last_name %>
+                <%= f.text_field :last_name,  autofocus: true, autocomplete: "last_name", value: @current_user.last_name %>
 
                 <b><%= f.label :email %></b><br />
-                <%= f.email_field :email, placeholder: @current_user.email, :readonly => true %>
+                <%= f.email_field :email,  autofocus: true, autocomplete: "email", value: @current_user.email, :readonly => true %>
             
                 <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
                   <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
@@ -42,22 +41,22 @@
                 <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
                
                 <b><%= f.label :current_password %></b><i>(we need your current password to confirm your changes)</i><br />
-                <%= f.password_field :current_password, autocomplete: "current-password" %>
+                <%= f.password_field :current_password, autocomplete: "current-password", value: @current_user.password %>
               </div>
 
               <b><u><h3>School</h3></u></b>
               <%= f.fields_for :school do |school_form| %>
                 <div class="row form-group form__input">
                   <b><%= school_form.label :name %></b>
-                  <%= school_form.text_field :name, placeholder: @current_user.school.name, :readonly => true %>
+                  <%= school_form.text_field :name,  autofocus: true, autocomplete: "first_name", value: @current_user.school.name, :readonly => true %>
               
                   <b><%= school_form.label :subdomain %></b>
-                  <%= school_form.text_field :subdomain, placeholder: @current_user.school.subdomain, :readonly => true %>
+                  <%= school_form.text_field :subdomain,  autofocus: true, autocomplete: "first_name", value: @current_user.school.subdomain, :readonly => true %>
                 </div>
               <% end %>
 
               <div class="actions">
-                <%= f.submit "Update Profile", class: "btn btn-primary {color: #008080}" %>
+                <%= link_to "Update Profile", users_registrations_save_updates_path(), class: "btn btn-primary {color: #008080}" %>
               </div>
           <% end %>
 
