working on connecting to drive v2

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,6 +60,7 @@
 <% end %>
 
     <%= render 'home/navbar' %>
+    <%= render 'layouts/alerts' %>
     
     <% if user_signed_in? %>
       <div id="wrapper">
