--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -30,6 +30,7 @@
                 <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Email Address", class: "space--field" %>
                 <%= f.password_field :password, autocomplete: "new-password", class: "space--field", placeholder: "Password (6 characters minimum)" %>
                 <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Password Confirmation", class: "space--field" %>
+                <%= hidden_field_tag 'authenticity_token', form_authenticity_token %>
               </div>
 
               <div class="actions">
