--- a/app/assets/stylesheets/essay_solutions.scss
+++ b/app/assets/stylesheets/essay_solutions.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the assignments controller here.
+// Place all the styles related to the essay_solutions controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
