--- a/app/views/essays/new.html.erb
+++ b/app/views/essays/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New Essay</h1>
+<div class="card" style="max-width: 80rem; min-height: 30rem">
+    <h5 class="card-header card--header--title">
+        New Essay
+        <%= link_to 'Back', course_path(session[:course_id]), class:"btn btn--primary2--header--button"  %>
+    </h5>
+    <div class="card-body">
+        <%= render 'form', essay: @essay %>
+    </div>
+</div>
 
-<%= render 'form', essay: @essay %>
 
-<%= link_to 'Back', essays_path %>
