--- a/app/views/quizes/new.html.erb
+++ b/app/views/quizes/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New Quize</h1>
-
-<%= render 'form', quize: @quize %>
-
-<%= link_to 'Back', quizes_path %>
+<div class="card" style="max-width: 80rem; min-height: 30rem">
+    <h5 class="card-header card--header--title">
+        New Quize
+        <%= link_to 'Back', course_path(session[:course_id]), class:"btn btn--primary2--header--button"  %>
+    </h5>
+    <div class="card-body">
+        <%= render 'form', quize: @quize %>
+    </div>
+</div>
