--- a/app/views/resources/new.html.erb
+++ b/app/views/resources/new.html.erb
@@ -1,6 +1,6 @@
 <div class="card" style="max-width: 80rem; min-height: 30rem">
     <h5 class="card-header card--header--title">
-        New Resource
+        <%= session[:course_id] %> - New Resource
         <%= link_to 'Back', course_path(session[:course_id]), class:"btn btn--primary2--header--button" %>
     </h5>
     <div class="card-body">
