different pages for user types

--- a/app/views/courses/add_users_to_course.html.erb
+++ b/app/views/courses/add_users_to_course.html.erb
@@ -5,8 +5,7 @@
   </h5>
   <div class="card-body">
     <h5 class="card--title">List of users from this school: <b><i><%= current_user.school.name %></i></b></h5><br />
-        <div class="card-text">
-        </div>
+        <div class="card-text"></div>
         <div class="table-responsive">
             <table class="table">
                 <thead class="table">
